--- a/config.json
+++ b/config.json
@@ -11,14 +11,14 @@
     "gh_url": "https://github.com/codingthunder",
     "blog_name": "Coding Thunder",
     "tag_line": "Heaven for programmers",
-    "gmail-user":"moumon18bhatt@gmail.com",
-    "gmail-password":"zy54nyders@sup",
-    "about_me":"I am a Student",
-    "about_text":"I am here to guide you and help you become a professional data scientist.....Lets Start",
+    "gmail-user":"your-mail-id",
+    "gmail-password":"your-mail-password",
+    "about_me":"ABOUT YOU",
+    "about_text":"DESCRIPTION",
     "no_of_posts":3,
     "login_image":"login.svg",
-    "admin_user":"moumon",
-    "admin_password": "darkside44",
-    "upload_location":"C:\\Users\\DELL\\Desktop\\Sandeepan\\materials\\Flask_Blog\\static\\img"
+    "admin_user":"ADMIN USERNAME",
+    "admin_password": "ADMIN PASSWORD",
+    "upload_location":"YOUR FOLDER LOCATION"
   }
 }
